<resources>
    <string name="app_name">Valiutu konvertavimas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Valiutu konvertavimas</string>
    <string name="nav_header_subtitle">www.paysera.lt</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Nustatymai</string>
    <string name="menu_home">Pagrindinis</string>
    <string name="menu_convert">Konvertavimas</string>
    <string name="menu_history">Istorija</string>
    <string name="title_activity_convert">Konvertavimas</string>
    <string name="title_activity_history">Istorija</string>
    <string name="title_account">Sąskaitos balansas</string>
    <string name="welcome_text">Sveiki Valiutu Konvertavimo Aplikacijoje !</string>
    <string name="account_eur">EUR</string>
    <string name="account_usd">USD</string>
    <string name="account_jpy">JPY</string>
    <string name="account_count_default">Iš viso konvertavimu : 0</string>
    <string name="history_button_all">Visi</string>
    <string name="history_count_default">Kiekis : 0</string>
    <string name="history_commission_default">Čia nenurodoma</string>
    <string name="convert_from">Iš : </string>
    <string name="convert_to">Į : </string>
    <string name="convert_amount">Kiekis : </string>
    <string name="convert_submit">Pateikti konvertavimą</string>
    <string name="not_available"> Failed </string>
    <string name="not_available_history">Čia nenurodoma</string>
    <string name="overall_convert">"Iš viso konvertavimu : "</string>
    <string name="fab_message">Rašyk e-mail ivan.gastilovic@hotmail.com</string>
    <string name="value_error">Nurodykit konvertavimo sumą</string>
    <string name="commission_error">Nepakanka pinigų užmokėti komisinį mokėstį</string>
    <string name="balance_error">Nepakanka pinigų</string>
    <string name="currency_error">Valiutos turi skirtis</string>
    <string name="converted">"Jūs konvertavote "</string>
    <string name="jpy">JPY</string>

    <string-array name="currency_array">
        <item>EUR</item>
        <item>USD</item>
        <item>JPY</item>
    </string-array>

    <string-array name="currency_array_two">
        <item>USD</item>
        <item>JPY</item>
        <item>EUR</item>
    </string-array>



</resources>
