<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_convert"
        tools:context="app.bankconvert.page.convert.ConvertActivity"
        android:weightSum="11"
        android:background="@drawable/background_gradient">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/border_shadow"
                    android:layout_marginTop="2dp">
                <TextView
                        style="@style/accountTextView"
                        android:text="@string/title_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="@drawable/text_otherwise_background_gradient"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="70dp"
                    android:layout_marginLeft="70dp"
                    android:background="@drawable/border_shadow">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:background="@drawable/text_background_gradient"
                        android:paddingTop="3dp"
                        android:paddingBottom="1dp">
                    <TextView
                            style="@style/accountTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/eurAmountTextView"
                            android:textAlignment="textEnd"/>
                    <TextView
                            style="@style/accountTextView"
                            android:text="@string/account_eur"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:background="@drawable/text_background_gradient"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp">
                    <TextView
                            style="@style/accountTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/usdAmountTextView"
                            android:textAlignment="textEnd"/>
                    <TextView
                            style="@style/accountTextView"
                            android:text="@string/account_usd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:background="@drawable/text_background_gradient"
                        android:paddingBottom="3dp"
                        android:paddingTop="1dp">
                    <TextView
                            style="@style/accountTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/jpyAmountTextView"
                            android:textAlignment="textEnd"/>
                    <TextView
                            style="@style/accountTextView"
                            android:text="@string/account_jpy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:background="@drawable/border_shadow">
                <TextView
                        style="@style/accountTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/convertCountTextView"
                        android:textAlignment="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/text_otherwise_background_gradient"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginLeft="45dp"
                    android:background="@drawable/border_shadow">
                <TextView
                        style="@style/accountTextView"
                        android:text="@string/menu_convert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="@drawable/text_background_gradient"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/border_shadow">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:gravity="center"
                        android:background="@drawable/text_otherwise_background_gradient"
                        android:paddingTop="3dp"
                        android:paddingBottom="1dp">
                    <TextView
                            style="@style/accountTextView"
                            android:text="@string/convert_from"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"/>
                    <Spinner
                            style="@style/accountTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/fromSpinner"
                            android:layout_weight="1"
                            android:entries="@array/currency_array"
                            android:paddingLeft="5dp"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:gravity="center"
                        android:background="@drawable/text_otherwise_background_gradient"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp">
                    <TextView
                            style="@style/accountTextView"
                            android:text="@string/convert_to"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"/>
                    <Spinner
                            style="@style/accountTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/toSpinner"
                            android:layout_weight="1"
                            android:entries="@array/currency_array_two"
                            android:paddingLeft="5dp"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:gravity="center"
                        android:background="@drawable/text_otherwise_background_gradient"
                        android:paddingBottom="3dp"
                        android:paddingTop="1dp">
                    <TextView
                            style="@style/accountTextView"
                            android:text="@string/convert_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"/>
                    <EditText
                            style="@style/accountTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="7"
                            android:background="@android:color/transparent"
                            android:id="@+id/amountEditText"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:textColorHint="#FFECB3"
                            android:hint="0.00"
                            android:inputType="numberDecimal"
                            android:textCursorDrawable="@null"
                            android:paddingLeft="5dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp">
                <Button
                        style="@style/submitButton"
                        android:text="@string/convert_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/submitButton"
                        android:layout_gravity="center"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:background="@drawable/request_gradient"
                        android:textAllCaps="false"
                        android:fontFamily="@font/aclonica"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>