<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context="app.bankconvert.page.main.MainActivity"
        android:weightSum="11"
        android:background="@drawable/background_gradient">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_weight="5"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/border_shadow">
            <TextView
                    style="@style/welcomeTextView"
                    android:text="@string/welcome_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:background="@drawable/text_background_gradient"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:background="@drawable/border_shadow">
                <TextView
                        style="@style/accountTextView"
                        android:text="@string/title_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:background="@drawable/text_otherwise_background_gradient"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:paddingBottom="5dp"
                    android:id="@+id/mainAccountRecyclerView"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:background="@drawable/border_shadow">
                <TextView
                        style="@style/accountTextView"
                        android:text="@string/account_count_default"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/convertCountTextView"
                        android:textAlignment="center"
                        android:background="@drawable/text_otherwise_background_gradient"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>